04-May-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Reduced the number of dialogs shown to user about open documents.

 * backend-django/clarin_backend/sql_views.py:
 * backend-django/clarin_backend/urls.py:
 * clarin-angular/src/app/components/dialogs/import-modal/import-modal.component.ts:
 Fixed a bug when importing an exported collection (where "text" was not
 defined if the handler did not need to run again).

 * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.html:
 * clarin-angular/src/app/components/controls/toolbar-widget/toolbar-widget.component.ts:
 * clarin-angular/src/app/components/dialogs/detect-changes-modal/detect-changes-modal.component.ts:
 * clarin-angular/src/app/components/dialogs/detect-open-doc-modal/detect-open-doc-modal.component.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 * clarin-angular/src/app/services/restore-annotation-service/restore-annotation.service.ts:
 Added new method RestoreAnnotationService::saveAndCloseDocument(), and
 restricted use of RestoreAnnotationService::autoSave(). Autosave disabled in
 UI.

 * clarin-angular/src/assets/data/menu.json: Added links to the documentation,
 hosted in Github Pages: https://iit-demokritos.github.io/clarin-el-annotation-tool/

 * clarin-angular/src/app/components/dialogs/select-document-modal/select-document-modal.component.html:
 * clarin-angular/src/assets/i18n/el-GR.json: Fixed typos in the Greek
 translation.

01-April-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * docs/*: Created a 'docs' directory, for Github Pages.

 * build_all.sh:
 * clarin-angular/package.json:
 * clarin-angular/src/proxy.conf.json: Compodoc added.

25 March 2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/login/login.component.html:
 * clarin-angular/src/app/components/views/login/login.component.ts: